--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -4,6 +4,8 @@ a {
 
 ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 ul,
@@ -19,4 +21,7 @@ h5 {
 
 img {
     display: block;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
 }
