--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,7 +1,22 @@
 .header {
-    padding-top: 24px;
-    padding-bottom: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-bottom: solid 1px $line;
+
+    @media screen and (min-width: 480px) {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    @media screen and (min-width: 768px) {
+        padding-top: 21px;
+        padding-bottom: 21px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
 
 &__,.container{
         display: flex;
@@ -15,11 +30,25 @@
     &__logo {
         color: $logo;
         font-family: Raleway;
-        font-size: 26px;
+        font-size: 24px;
         font-weight: 700;
         line-height: 1.38;
-        letter-spacing: 0.78px;
-        margin-right: 93px;
+        letter-spacing: 0.72px;
+
+        @media screen and (min-width: 480px) {
+font-size: 24px;
+letter-spacing: 0.72px;
+        }
+
+        @media screen and (min-width: 768px) {
+            margin-right: 88px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            font-size: 26px;
+            letter-spacing: 0.78px;
+            margin-right: 93px;
+        }
         }
         
         &__span {
@@ -32,10 +61,21 @@
         }
         
         .nav {
-            @include flex-box($a: flex-start);
-            // display: flex;
+            display: none;
             gap: 50px;
-            // align-items: center;
+            align-items: center;
+
+            @media screen and (min-width: 480px) {
+                display: none;
+            }
+
+            @media screen and (min-width: 768px) {
+                display: flex;
+            }
+
+            @media screen and (min-width: 1200px) {
+                
+            }
 
             .contacts__link:hover,
             &__link:hover {
@@ -67,12 +107,25 @@
         
         
         &__list {
-            @include flex-box($a: flex-start);
-            // display: flex;
-            gap: 50px;
-            // align-items: center;
-        }
+            display: none;
+            margin-left: auto;
         
+             @media screen and (min-width: 480px) {
+              display: none;
+            }
+        
+             @media screen and (min-width: 768px) {
+              display: flex;
+              gap: 10px;
+              flex-direction: column;
+            }
+        
+             @media screen and (min-width: 1200px) {
+              gap: 30px;
+              flex-direction: row;
+            }
+          }
+          
         &__item {
             margin-bottom: 0;
             margin-right: 30px;
@@ -83,6 +136,19 @@
             @include flex-box($a: flex-start);
             // display: flex;
             // align-items: center;
+
+            @media screen and (min-width: 480px) {
+
+            }
+
+            @media screen and (min-width: 768px) {
+
+            }
+
+            @media screen and (min-width: 1200px) {
+                font-size: 14px;
+                letter-spacing: 0.28;
+            }
         }
         
         &__:hover {
