--- a/style/main.css
+++ b/style/main.css
@@ -3,12 +3,27 @@ body {
 }
 
 .container {
-  width: 1200px;
+  max-width: 1200px;
   /* outline: solid red; */
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 a {
@@ -17,6 +32,8 @@ a {
 
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 ul,
@@ -32,12 +49,33 @@ h5 {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
 }
 
 .header {
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-bottom: solid 1px #ECECEC;
+}
+@media screen and (min-width: 480px) {
+  .header {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
 }
 .header__, .header .container {
   display: flex;
@@ -49,11 +87,28 @@ img {
 .header__logo {
   color: #2196F3;
   font-family: Raleway;
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 700;
   line-height: 1.38;
-  letter-spacing: 0.78px;
-  margin-right: 93px;
+  letter-spacing: 0.72px;
+}
+@media screen and (min-width: 480px) {
+  .header__logo {
+    font-size: 24px;
+    letter-spacing: 0.72px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header__logo {
+    margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    font-size: 26px;
+    letter-spacing: 0.78px;
+    margin-right: 93px;
+  }
 }
 .header__span {
   color: #000000;
@@ -64,10 +119,19 @@ img {
   letter-spacing: 0.78px;
 }
 .header .nav {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  display: none;
   gap: 50px;
+  align-items: center;
+}
+@media screen and (min-width: 480px) {
+  .header .nav {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header .nav {
+    display: flex;
+  }
 }
 .header .nav .contacts__link:hover, .header .nav__link:hover {
   color: #2196F3;
@@ -90,10 +154,26 @@ img {
   transition-delay: 0;
 }
 .header__list {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 50px;
+  display: none;
+  margin-left: auto;
+}
+@media screen and (min-width: 480px) {
+  .header__list {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header__list {
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__list {
+    gap: 30px;
+    flex-direction: row;
+  }
 }
 .header__item {
   margin-bottom: 0;
@@ -104,6 +184,12 @@ img {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .header__link {
+    font-size: 14px;
+    letter-spacing: 0.28;
+  }
 }
 .header__:hover__contact {
   fill: #2196F3;
